--- a/src/stylesheets/Footer.css
+++ b/src/stylesheets/Footer.css
@@ -1,6 +1,16 @@
-.Footer{
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 2.5rem;
+
+.foot{
+    position:absolute;
+    top:0px;
+    text-align:center;
+    border-radius: 15px;
+    position:relative; 
+    height:90%;
+    width:100%;
+    margin:auto;
+    background-color:rgba(navy,0.3);
+    color:white;
+    vertical-align: middle;
+    line-height: 90px; 
+   
 }
