--- a/src/stylesheets/Header.css
+++ b/src/stylesheets/Header.css
@@ -5,13 +5,18 @@
     font-size: 30px;
     background-image: url('.././img/spaceBackground.jpeg');
     width:99%;
-    padding: 15px;;
-    border-radius: 25px;
-    height:900px;
+    padding: 10px;;
+    border-radius: 15px;
+    height:300px;
     background-color:rgba(50, 6, 65, 0.4);
     top: 0;
 	bottom:500px;
 	left: 0;
 	right: 0;
     margin: auto;
+
+    
 }
+.header:hover {
+    box-shadow: 0 0 2rem gray;
+  }
