--- a/src/stylesheets/NavBar.css
+++ b/src/stylesheets/NavBar.css
@@ -1,10 +1,9 @@
 .NavBar{
-    background-color:lightgrey;
+    background-color:rgba(lightgrey,0.4);
     width:99%;
     padding: 4px;
-    border-radius: 25px;
-    
 
+    
 }
 .topnav {
     position: relative;
@@ -14,7 +13,7 @@
 
 .topnav a {
     float: left ;
-    color: black;
+    color: white;
     text-align: center;
     padding: 12px 35px;
     text-decoration: none;
@@ -28,5 +27,5 @@
 }
 
 .topnav a.active {
-    color: navy;
+    color: white;
 }
