--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -1,36 +1,45 @@
-
+#root{
+    height:100%;
+}
+input,.form {box-sizing: border-box;}
 body {
+    height:100%;
     font-family: Arial, Helvetica, sans-serif;
     background-repeat: no-repeat;
     background-color:white;
-    background-size: cover;
     align-content: center;
-    color:white;
 }
 .middle{
-    position:absolute;
-    width:99%;
-    padding: 50px;
-    border-radius: 25px;
-    background-color: rgba(121, 94, 136, 0);
-    height:800px;
-    top:200px;
-	bottom:100px;
-	left: 0;
-    right: 0;
-    margin: auto;
+    height:600px;
+    border-radius: 15px;
 }
+.Title{
+    position:relative;
+    left:25%;
+    font-size: 20pt;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color:black;
+    width: 50%;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 90px;    
+    background-color:white;
+    height:100px;
+    border-radius: 15px;
+}
+.Title:hover {
+    box-shadow: 0 0 2rem gray;
+  }
 
-.bottom{
-    width:99%;
-    height:200px;
-    border-top: 1px black;
-    padding: 50px;
-    border-radius: 25px;
-    background-color: white;
-    top:0;
-	
-	left: 0;
-    right: 0;
-    margin: auto;
+.Footer{
+    position:relative;
+    width:100%;
+    height:100%;
+    border-radius: 15px;
+    background-color: rgb(112, 112, 116);
+   
+    
+}
+.Footer:hover{
+    box-shadow: 0 0 2rem gray;
 }
