--- a/src/stylesheets/Form.css
+++ b/src/stylesheets/Form.css
@@ -1,19 +1,19 @@
 .form {
-	width: 100%;
-    height: 600px;
+	width: 60%;
+    height: 465px;
     align-content: center;
-	background-color: white;
+    background: rgba(254, 254, 254,0.6);
     position: relative;
     border-color: 1px darkgrey;
     border-radius: 25px;
-	bottom:0px;
+    top:100px;
     padding: 40px;
 	left: 0;
     color:black;
     margin: auto;
     font-size: large;
     font-family: Arial, Helvetica, sans-serif;
-    
+    box-shadow: 0 0 2rem black;
     
 }
 .form-div{
@@ -57,8 +57,8 @@
     border: 1px solid darkgray;
     border-radius: 4px;
     height: 50px;
-    margin-top: 6px;
-    margin-bottom: 16px;
+    margin-top: 0px;
+    margin-bottom: 10px;
     resize: vertical;
 
 }
@@ -69,18 +69,21 @@
     border: 1px solid darkgrey;
     border-radius: 4px;
     height: 50px;
-    margin-top: 6px;
-    margin-bottom: 16px;
+    margin-top: 0px;
+    margin-bottom: 10px;
     resize: vertical;
     font-size: 14pt;
 }
+
+
 .titles{
-    background-color: white;
     border: 21x solid rgb(20, 12, 131);
     border-radius: 15px;
     text-align:center;
     width:150px;
-    height:55px;
+    height:30px;
+    vertical-align: middle;
+   
 }
 input[type=text], textarea {
     font-size:10pt;
@@ -95,6 +98,7 @@ input[type=text], textarea {
 }
 
 input[type=submit] {
+    height:40px;
     background-color: rgb(67, 7, 103);
     color: white;
     padding: 12px 325px;
@@ -106,6 +110,4 @@ input[type=submit] {
 input[type=submit]:hover {
     background-color: rgb(209, 184, 226);
 }
-.form:hover {
-    box-shadow: 0 0 2rem gray;
-  }
+
