--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -1,9 +1,11 @@
 #root{
     height:100%;
+    width:100%;
 }
 input,.form {box-sizing: border-box;}
 body {
     height:100%;
+    background-image: url('.././img/spaceBackground.jpeg');
     font-family: Arial, Helvetica, sans-serif;
     background-repeat: no-repeat;
     background-color:white;
@@ -18,28 +20,24 @@ body {
     left:25%;
     font-size: 20pt;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color:black;
+    color:white;
     width: 50%;
     text-align: center;
     vertical-align: middle;
     line-height: 90px;    
-    background-color:white;
+    background: rgb(204, 204, 204); /* Fallback for older browsers without RGBA-support */
+    background: rgba(250, 247, 247,0.2);
     height:100px;
     border-radius: 15px;
+    box-shadow: 0 0 2rem black;
 }
-.Title:hover {
-    box-shadow: 0 0 2rem gray;
-  }
-
 .Footer{
-    position:relative;
-    width:100%;
-    height:100%;
-    border-radius: 15px;
-    background-color: rgb(112, 112, 116);
-   
+    border-radius : 15px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;   
+    background-color: rgba(239, 239, 245,0.2);
+    box-shadow: 0 0 2rem black;
     
 }
-.Footer:hover{
-    box-shadow: 0 0 2rem gray;
-}
+
