--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -3,7 +3,7 @@
 }
 input,.form {box-sizing: border-box;}
 body {
-    height:100%;
+
     background-image: url('.././img/spaceBackground.jpeg');
     font-family: Arial, Helvetica, sans-serif;
     background-repeat: no-repeat;
@@ -34,9 +34,16 @@ body {
     border-radius : 15px;
     position: absolute;
     bottom: 0;
-    width: 100%;   
+    width: 99%; 
+    height:80px;  
     background-color: rgba(239, 239, 245,0.2);
     box-shadow: 0 0 2rem black;
+    text-align:center;
+    border-radius: 15px;
+    margin:auto;
+    color:white;
+    vertical-align: middle;
+    line-height: 60px; 
     
 }
 
