--- a/src/stylesheets/Form.css
+++ b/src/stylesheets/Form.css
@@ -103,4 +103,6 @@ input[type=submit]:hover {
     background-color: rgb(92, 23, 138);
 }
 input,.form {box-sizing: border-box;}
-
+ .formError{
+     color:red;
+ }
