--- a/src/stylesheets/Form.css
+++ b/src/stylesheets/Form.css
@@ -5,7 +5,7 @@
     background: rgba(254, 254, 254,0.6);
     position: relative;
     border-radius: 25px;
-    top:180px;
+    top:90px;
     padding: 40px;
 	left: 0;
     margin: auto;
@@ -16,6 +16,26 @@
 .form-div{
     height:200px;
 }
+
+.output {
+	width: 65%;
+    align-content: center;
+    background: rgba(254, 254, 254,0.6);
+    position: relative;
+    border-radius: 25px;
+    top:50px;
+    padding: 40px;
+	left: 0;
+    margin: auto;
+    font-family: Arial, Helvetica, sans-serif;
+    box-shadow: 0 0 2rem black;
+    
+
+}
+.output-div{
+    height:200px;
+}
+
 #next{
     
     float:right;  
@@ -27,6 +47,20 @@
    
 }
 #next:hover {
+    background-color: rgb(23, 57, 247);
+}
+
+#again{
+    
+    float:right;  
+    height: 30px;
+    width: 100px;
+    background-color: rgb(12, 60, 191);
+    color: white;
+    border-radius: 4px;
+   
+}
+#again:hover {
     background-color: rgb(23, 57, 247);
 }
 
