--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -1,16 +1,22 @@
 body {
     background-image: url('.././img/spaceBackground.jpeg');
-
-    background-repeat: no-repeat;
+    background-size: cover;
+    background-repeat: repeat;
     background-color:white;
     align-content: center;
+    padding-bottom: 100px;
+    height: 100%;
+    overflow: auto;
 }
 .Footer{
     border-radius : 15px;
-    position: absolute;
-    bottom: 0;
+    position: relative;
+    top: 60px;
+    bottom: 20px;
     width: 99%; 
-    height:80px;  
+    height:80px; 
+    margin-top: -80px;
+    clear:both; 
     background-color: rgba(239, 239, 245,0.2);
     box-shadow: 0 0 2rem black;
     text-align:center;
@@ -18,8 +24,7 @@ body {
     margin:auto;
     color:white;
     vertical-align: middle;
-    line-height: 60px; 
-    
+    line-height: 80px;   
 }
 .Title{
     position:relative;
