--- a/src/stylesheets/Form.css
+++ b/src/stylesheets/Form.css
@@ -1,11 +1,11 @@
 .form {
 	width: 65%;
-    height: 465px;
+    height: 500px;
     align-content: center;
     background: rgba(254, 254, 254,0.6);
     position: relative;
     border-radius: 25px;
-    top:90px;
+    top:250px;
     padding: 40px;
 	left: 0;
     margin: auto;
@@ -23,7 +23,7 @@
     background: rgba(254, 254, 254,0.6);
     position: relative;
     border-radius: 25px;
-    top:50px;
+    top:250px;
     padding: 40px;
 	left: 0;
     margin: auto;
@@ -33,13 +33,13 @@
 
 }
 .output-div{
-    height:200px;
+    /*height:250px;*/
 }
 
 #next{
     
     float:right;  
-    height: 30px;
+    height: 50px;
     width: 100px;
     background-color: rgb(12, 60, 191);
     color: white;
@@ -66,7 +66,7 @@
 
 #previous{
     float:left;
-    height: 30px;
+    height: 50px;
     width: 100px;
     background-color: rgb(62, 62, 63);
     color: white;
@@ -124,7 +124,7 @@ input[type=text], textarea {
 }
 
 input[type=submit] {
-    height:40px;
+    height:50px;
     background-color: rgb(67, 7, 103);
     color: white;
     padding: 12px 325px;
