--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -1,38 +1,43 @@
 body {
     background-image: url('.././img/spaceBackground.jpeg');
     background-size: cover;
-    background-repeat: repeat;
-    background-color:white;
     align-content: center;
-    padding-bottom: 100px;
-    height: 100%;
-    overflow: auto;
+
+
 }
-.Footer{
-    border-radius : 15px;
-    position: relative;
-    top: 60px;
-    bottom: 20px;
-    width: 99%; 
-    height:80px; 
-    margin-top: -80px;
-    clear:both; 
-    background-color: rgba(239, 239, 245,0.2);
-    box-shadow: 0 0 2rem black;
-    text-align:center;
-    border-radius: 15px;
-    margin:auto;
-    color:white;
-    vertical-align: middle;
-    line-height: 80px;   
+:root {
+    --space: 1.5em 0;
+    --space: 2em 0;
 }
+
+.Site {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.Site-content {
+    flex: 1 0 auto;
+    padding: var(--space) var(--space) 0;
+    width: 100%;
+}
+
+.Site-content:after {
+    content: '\00a0';
+    display: block;
+    margin-top: var(--space);
+    height: 0;
+    visibility: hidden;
+}
+    
 .Title{
     position:relative;
-    left:25%;
+    left:18%;
+    top: 200px;
     font-size: 20pt;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color:white;
-    width: 50%;
+    width: 64%;
     text-align: center;
     vertical-align: middle;
     line-height: 90px;    
