--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -1,50 +1,38 @@
-body {
-    background-image: url('.././img/spaceBackground.jpeg');
-    background-size: cover;
-    align-content: center;
-
-
-}
-:root {
-    --space: 1.5em 0;
-    --space: 2em 0;
-}
-
-.Site {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-}
-
-.Site-content {
-    flex: 1 0 auto;
-    padding: var(--space) var(--space) 0;
-    width: 100%;
+ .trigger {
+    font-size: 20px;
+    line-height: 90px;
+    padding: 0 24px;
+    cursor: pointer;
+    transition: color 0.3s;
+  }
+  
+.trigger:hover {
+    color: #1890ff;
+  }
+  
+.logo {
+    height: 40px;
+    background: rgba(255, 255, 255, 0.3);
+    margin: 16px;
+  }
+  
+.site-layout .site-layout-background {
+    background: #fff;
 }
 
-.Site-content:after {
-    content: '\00a0';
-    display: block;
-    margin-top: var(--space);
-    height: 0;
-    visibility: hidden;
-}
-    
-.Title{
-    position:relative;
-    left:18%;
-    top: 50px;
-    font-size: 20pt;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color:white;
-    width: 64%;
-    text-align: center;
-    vertical-align: middle;
-    line-height: 90px;    
-    background: rgb(204, 204, 204); /*Fallback for older browser that don't support RGBA*/
-    background: rgba(250, 247, 247,0.2);
-    height:100px;
-    border-radius: 15px;
-    box-shadow: 0 0 2rem black;
+html, body{
+    height: 100%;
+    margin:0;
 }
 
+#app{
+ width:100%;
+ min-width:780;
+ min-height: 100%;
+ margin: 0 auto 0 auto;
+ padding: 0;
+ height:1px;
+}
+.ant-layout{
+    height:100%;
+}
