--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -18,7 +18,7 @@
       height:50px;
   }
   
-.site-layout .site-layout-background {
+.layout .layout-background {
     background: #fff;
 }
 
@@ -34,6 +34,11 @@ html, body{
  margin: 0 auto 0 auto;
  padding: 0;
  height:1px;
+}
+
+#title{
+  font-weight: bold;
+  font-size: x-large;
 }
 .ant-layout{
     height:100%;
